# UglySoundGenerator

./: .gitattributes  .gitignore  Cargo.toml  README.md  README_EXAMPLES.md  pyproject.toml
.github/workflows/: ci.yml  verification.yml
docs/: COMMANDS.md  METRICS.md  PSYCHOACOUSTICS.md  ROADMAP.md
packaging/homebrew/: README.md  usg.rb
packaging/pip/: README.md
presets/chains/: arcade_overheat.json  atari2600_shred.json  binaural_nuisance.json  cassette_headache.json  chip_broken_clock.json  choir_collapse.json  console_busfight.json  n64_rattle.json  ps1_grit.json  rom_corruption.json  wolf_fifth_panic.json
presets/go_contours/: 01_linear_curve_01.json  02_linear_curve_02.json  03_linear_curve_03.json  04_linear_curve_04.json  05_linear_curve_05.json  06_linear_curve_06.json  07_linear_curve_07.json  08_linear_curve_08.json  09_linear_curve_09.json  10_linear_curve_10.json  11_linear_curve_11.json  12_step_pattern_01.json  13_step_pattern_02.json  14_step_pattern_03.json  15_step_pattern_04.json  16_step_pattern_05.json  17_step_pattern_06.json  18_step_pattern_07.json  19_step_pattern_08.json  20_step_pattern_09.json  21_step_pattern_10.json  22_step_pattern_11.json  23_morph_pattern_01.json  24_morph_pattern_02.json  25_morph_pattern_03.json  26_morph_pattern_04.json  27_morph_pattern_05.json  28_morph_pattern_06.json  29_morph_pattern_07.json  README.md  (+4 more)
scripts/: demo_analysis_joke.sh  demo_atmos_piece.sh  demo_piece_trajectory.sh  demo_speech_pack.sh  generate_example_corpus.sh  install.sh  piecee.sh  refresh_homebrew_formula.sh  run_demos.sh  verify_repo.sh
src/: backend_cuda.rs  backend_metal.rs  cli_core_commands.rs  lib.rs  main.rs
tests/: cli_smoke.rs  verification_contracts.rs
(+12 files in other folders)
