[package]
name = "usg"
version = "0.4.0"
edition = "2024"

[features]
default = []
metal = ["dep:metal"]
cuda = ["dep:cudarc"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hound = "3.5"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
rustfft = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
metal = { version = "0.31", optional = true }
cudarc = { version = "0.17", default-features = false, features = ["driver", "nvrtc", "dynamic-loading", "cuda-12040"], optional = true }
