[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uglysoundgenerator"
version = "0.6.0"
description = "Python-facing shim for the UglySoundGenerator Rust CLI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Colby Leider" }]
keywords = ["audio", "synthesis", "psychoacoustics", "dissonance", "chiptune"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]

[project.urls]
Homepage = "https://github.com/TheColby/UglySoundGenerator"
Repository = "https://github.com/TheColby/UglySoundGenerator"

[project.scripts]
uglysoundgenerator = "uglysoundgenerator.cli:main"
usg-pip-install = "uglysoundgenerator.installer:main"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]
